# minirust

./: .gitignore  Cargo.toml  basic.mrs  grammar.rs  vars.mrs
src/: ast.rs  codegen.rs  context.rs  grammar.lalrpop  llvm.rs  main.rs  parse.rs  typecheck.rs
