[package]
name = "minirust"
version = "0.1.0"
authors = ["Doug Woos <doug.woos@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
failure_derive = "0.1.5"
llvm-sys = "80"
lalrpop-util = "0.16.3"
regex = "0.2.0"
hlllvm = { git = "https://github.com/dwoos/hlllvm.git" }
tempfile = "3.1"

[build-dependencies]
lalrpop = "0.16.3"

