[package]
name = "minirust"
version = "0.1.0"
authors = ["Doug Woos <doug.woos@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
failure_derive = "0.1.5"
lalrpop-util = "0.19"
regex = "0.2.0"
tempfile = "3.1"
inkwell = {version = "0.1.0-beta.2", features = ["llvm11-0"]}

[build-dependencies]
lalrpop = "0.19"

